--- a/cursoAPI/cursoAPI/appsettings.json
+++ b/cursoAPI/cursoAPI/appsettings.json
@@ -1,9 +1,13 @@
 {
+  "MySqlConnection": {
+    "MySqlConnectionString": "Server=localhost; DataBase=PersonDB; Uid=root;Pwd="
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
     }
   },
   "AllowedHosts": "*"
-  }
+}
 }
